# tp_prediction_trafic

./: FAQ.ipynb  README.md  partie_1.ipynb  partie_2.ipynb  partie_3.ipynb  partie_4.ipynb  requirements.txt
assets/: fiche_naive_bayes.ipynb  fiche_naive_bayes.md  map.html  map_2.html
simplificator/: LICENCE.md  README.ipynb  README.md  pyproject.toml  requirements.txt
simplificator/src/simplificator/: __init__.py  sf_config.py  sf_dataframe.py  sf_err.py  sf_geodataframe.py  sf_naivebayes.py  sf_tools.py
